cmake_minimum_required(VERSION 3.2)
project(dcap)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    man/dccp.1
    patches/2.47.6/dcap-aliasing.patch
    patches/2.47.6/dcap-dlopen.patch
    patches/2.47.6/dcap-libs.patch.2.47.6
    plugins/gssapi/base64.c
    plugins/gssapi/base64.h
    plugins/gssapi/client.c
    plugins/gssapi/Copyright
    plugins/gssapi/gssIoTunnel.c
    plugins/gssapi/gssTunnel.h
    plugins/gssapi/Makefile.am
    plugins/gssapi/server.c
    plugins/gssapi/tunnelQueue.c
    plugins/gssapi/tunnelQueue.h
    plugins/gssapi/util.c
    plugins/gssapi/util.h
    plugins/ssl/get_user.h
    plugins/ssl/Makefile.am
    plugins/ssl/sslTunnel.c
    plugins/ssl/user.c
    plugins/ssl/user_entry.h
    plugins/telnet/dcapPasswd.c
    plugins/telnet/get_user.h
    plugins/telnet/Makefile.am
    plugins/telnet/passwd4dCapDoor.example
    plugins/telnet/README
    plugins/telnet/telnetTunnel.c
    plugins/telnet/user.c
    plugins/telnet/user_entry.h
    plugins/Makefile.am
    specs/sl6/dcap-epel.spec
    src/array.c
    src/array.h
    src/br.c
    src/char2crc.c
    src/char2crc.h
    src/dc_check
    src/dc_hack.h
    src/dc_job_hack.c
    src/dc_stage
    src/dcap.c
    src/dcap.def
    src/dcap.dsp
    src/dcap.dsw
    src/dcap.h
    src/dcap_accept.c
    src/dcap_accept.h
    src/dcap_access.c
    src/dcap_acl.c
    src/dcap_ahead.c
    src/dcap_ahead.h
    src/dcap_checksum.c
    src/dcap_checksum.h
    src/dcap_chmod.c
    src/dcap_chown.c
    src/dcap_close.c
    src/dcap_close.h
    src/dcap_command.c
    src/dcap_command.h
    src/dcap_debug.c
    src/dcap_debug.h
    src/dcap_dirent.c
    src/dcap_dup.c
    src/dcap_errno.h
    src/dcap_error.c
    src/dcap_error.h
    src/dcap_fsync.c
    src/dcap_fsync.h
    src/dcap_functions.h
    src/dcap_interpreter.c
    src/dcap_interpreter.h
    src/dcap_lcb.c
    src/dcap_lcb.h
    src/dcap_lib.dsp
    src/dcap_lseek.c
    src/dcap_lseek.h
    src/dcap_mkdir.c
    src/dcap_mqueue.c
    src/dcap_mqueue.h
    src/dcap_open.c
    src/dcap_poll.c
    src/dcap_poll.h
    src/dcap_preload.c
    src/dcap_preload64.c
    src/dcap_protocol.c
    src/dcap_protocol.h
    src/dcap_read.c
    src/dcap_read.h
    src/dcap_reconnect.c
    src/dcap_reconnect.h
    src/dcap_rename.c
    src/dcap_signal.c
    src/dcap_signal.h
    src/dcap_stat.c
    src/dcap_str_util.c
    src/dcap_str_util.h
    src/dcap_stream.c
    src/dcap_test.c
    src/dcap_test.py
    src/dcap_types.h
    src/dcap_unix2win.c
    src/dcap_unix2win.h
    src/dcap_unlink.c
    src/dcap_url.c
    src/dcap_url.h
    src/dcap_version.c.in
    src/dcap_win_poll.h
    src/dcap_write.c
    src/dcap_write.h
    src/dccp.c
    src/dccp.dsp
    src/dccp_linux_directio.c
    src/dcsuck.c
    src/debug_level.lst
    src/debug_map.h
    src/dispatcher.c
    src/fnal_thread.c
    src/gettrace.c
    src/gettrace.h
    src/input_parser.c
    src/input_parser.h
    src/io.c
    src/io.h
    src/ioTunnel.h
    src/lineparser.c
    src/lineparser.h
    src/links.c
    src/links.h
    src/linux_trace.c
    src/Makefile.am
    src/node_plays.c
    src/node_plays.h
    src/parser.c
    src/parser.h
    src/passive.c
    src/passive.h
    src/pnfs.c
    src/pnfs.h
    src/print_size.c
    src/print_size.h
    src/pydcap.i
    src/reader
    src/readv_test.c
    src/sigfig.c
    src/sigfig.h
    src/socket_nio.c
    src/socket_nio.h
    src/stack_trace.h
    src/str2errno.c
    src/str2errno.h
    src/string2stat.c
    src/string2stat.h
    src/sysdep.h
    src/system_io.c
    src/system_io.h
    src/thread_test.c
    src/tunnelManager.c
    src/tunnelManager.h
    src/wdccp.c
    src/win32_libdl.c
    src/win32_libdl.h
    src/writer
    src/xutil.c
    src/xutil.h
    tests/Makefile.am
    tests/test_url.c
    AUTHORS
    bootstrap.sh
    ChangeLog
    configure.ac
    COPYING
    COPYING.LIB
    dcap.spec.in
    INSTALL
    LICENSE
    Makefile.am
    Porting
    README)

add_executable(dcap ${SOURCE_FILES})